Adding gitignore and sexp dependency

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/cthulhology/sexel",
   "dependencies": {
     "express": "^4.19.2",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "sexp": "git://github.com/cthulhuology/sexp.git"
   }
 }
